ghc-6.2/hslibs/win32/Win32Control_stub_ffi.h

extern DWORD prim_bS_PUSHBUTTON();
extern DWORD prim_bS_DEFPUSHBUTTON();
extern DWORD prim_bS_CHECKBOX();
extern DWORD prim_bS_AUTOCHECKBOX();
extern DWORD prim_bS_RADIOBUTTON();
extern DWORD prim_bS_3STATE();
extern DWORD prim_bS_AUTO3STATE();
extern DWORD prim_bS_GROUPBOX();
extern DWORD prim_bS_AUTORADIOBUTTON();
extern DWORD prim_bS_OWNERDRAW();
extern DWORD prim_bS_LEFTTEXT();
extern DWORD prim_bS_USERBUTTON();
extern void* prim_createButton(char * nm,DWORD wstyle,DWORD bstyle,int x,int y,int w,int h,HWND parent,HMENU hmenu,HANDLE handle);
extern HWND access_prim_createButton_hwnd(HsPtr);
extern int access_prim_createButton_gc_failed(HsPtr);
extern void* access_prim_createButton_gc_failstring(HsPtr);
extern UINT prim_bST_CHECKED();
extern UINT prim_bST_INDETERMINATE();
extern UINT prim_bST_UNCHECKED();
extern void* prim_checkDlgButton(HWND arg1,int arg2,UINT arg3);
extern int access_prim_checkDlgButton_gc_failed(HsPtr);
extern void* access_prim_checkDlgButton_gc_failstring(HsPtr);
extern void* prim_checkRadioButton(HWND arg1,int arg2,int arg3,int arg4);
extern int access_prim_checkRadioButton_gc_failed(HsPtr);
extern void* access_prim_checkRadioButton_gc_failstring(HsPtr);
extern void* prim_isDlgButtonChecked(HWND arg1,int arg2);
extern UINT access_prim_isDlgButtonChecked_res1(HsPtr);
extern int access_prim_isDlgButtonChecked_gc_failed(HsPtr);
extern void* access_prim_isDlgButtonChecked_gc_failstring(HsPtr);
extern DWORD prim_cBS_SIMPLE();
extern DWORD prim_cBS_DROPDOWN();
extern DWORD prim_cBS_DROPDOWNLIST();
extern DWORD prim_cBS_OWNERDRAWFIXED();
extern DWORD prim_cBS_OWNERDRAWVARIABLE();
extern DWORD prim_cBS_AUTOHSCROLL();
extern DWORD prim_cBS_OEMCONVERT();
extern DWORD prim_cBS_SORT();
extern DWORD prim_cBS_HASSTRINGS();
extern DWORD prim_cBS_NOINTEGRALHEIGHT();
extern DWORD prim_cBS_DISABLENOSCROLL();
extern void* prim_createComboBox(char * nm,DWORD wstyle,DWORD cstyle,int x,int y,int w,int h,HWND parent,HMENU hmenu,HANDLE handle);
extern HWND access_prim_createComboBox_hwnd(HsPtr);
extern int access_prim_createComboBox_gc_failed(HsPtr);
extern void* access_prim_createComboBox_gc_failstring(HsPtr);
extern DWORD prim_eS_LEFT();
extern DWORD prim_eS_CENTER();
extern DWORD prim_eS_RIGHT();
extern DWORD prim_eS_MULTILINE();
extern DWORD prim_eS_UPPERCASE();
extern DWORD prim_eS_LOWERCASE();
extern DWORD prim_eS_PASSWORD();
extern DWORD prim_eS_AUTOVSCROLL();
extern DWORD prim_eS_AUTOHSCROLL();
extern DWORD prim_eS_NOHIDESEL();
extern DWORD prim_eS_OEMCONVERT();
extern DWORD prim_eS_READONLY();
extern DWORD prim_eS_WANTRETURN();